--- a/.github/workflows/rununityUPMbuildmultiversion.yml
+++ b/.github/workflows/rununityUPMbuildmultiversion.yml
@@ -1,4 +1,4 @@
-name: Run Unity Builds
+name: Run Multi-Version Unity UPM Build
 
 on:
   workflow_call:
@@ -59,7 +59,7 @@ jobs:
         name: 'Run Unity Builds'
         run: |
           echo "::group::Set Hub and editor locations"
-          $unityVersion = ${{ matrix.unityVersion }}
+          $unityVersion = '${{ matrix.unityVersion }}'
 
           echo "::group::Set Hub and editor locations"
 
@@ -69,6 +69,7 @@ jobs:
             $hubPath = "C:\Program Files\Unity Hub\Unity Hub.exe"
             $editorRootPath = "C:\Program Files\Unity\Hub\Editor\"
             $editorFileEx = "\Editor\Unity.exe"
+            $directorySeparatorChar = "\"
 
             #"Unity Hub.exe" -- --headless help
             #. 'C:\Program Files\Unity Hub\Unity Hub.exe' -- --headless help
@@ -82,6 +83,7 @@ jobs:
             $hubPath = "/Applications/Unity Hub.app/Contents/MacOS/Unity Hub"
             $editorRootPath = "/Applications/Unity/Hub/Editor/"
             $editorFileEx = "/Unity.app/Contents/MacOS/Unity"
+            $directorySeparatorChar = "/"
 
             # /Applications/Unity\ Hub.app/Contents/MacOS/Unity\ Hub -- --headless help
             function unity-hub 
@@ -94,6 +96,7 @@ jobs:
             $hubPath = "$HOME/Unity Hub/UnityHub.AppImage"
             $editorRootPath = "$HOME/Unity/Hub/Editor/"
             $editorFileEx = "/Editor/Unity"
+            $directorySeparatorChar = "/"
 
             # /UnityHub.AppImage --headless help
             # xvfb-run --auto-servernum "$HOME/Unity Hub/UnityHub.AppImage" --headless help
@@ -104,8 +107,6 @@ jobs:
           }
 
           echo "::endgroup::"
-
-
 
           echo "::group::Get String function to query a string for a value"
 
@@ -130,7 +131,6 @@ jobs:
           echo "::endgroup::"
 
           echo "::group::Get Installed Unity version based on Matrix"
-          echo 'Script Start'
           echo "Unity hub path is {$hubPath}"
           echo "Requested unity version is {$unityVersion}"
 
@@ -150,7 +150,7 @@ jobs:
             $queryUnityVersion = GetString $InstalledUnityVersions "$unityVersion" -MatchIndex 0
           }
 
-          echo "Found unity version is {$queryUnityVersion}"
+          echo "Found unity version is {$queryUnityVersion} for input {$unityVersion}"
 
           if ($queryUnityVersion -ne 0) 
           {
