--- a/.github/workflows/validateunityinstall.yml
+++ b/.github/workflows/validateunityinstall.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Script Version
         run: |
           echo "::group::Script Versioning"
-          $scriptVersion = "1.0.2"
+          $scriptVersion = "1.0.3"
           echo "Build Script Version: $scriptVersion"
           echo "::endgroup::"
         shell: pwsh      
@@ -152,22 +152,46 @@ jobs:
             }
           }
 
-          if($unityVersion.Length -lt 10)
+          function Get-LetterCount
           {
-            echo 'Short version of Version provided, finding latest full unity version number'
-            $InstalledUnityVersions = unity-hub editors -i
+            Param ([string]$string)
+            return $string.Length
+          }          
+
+          echo "::group::Find Installed Unity version based on input"
+          echo "Unity hub path is {$hubPath}"
+          echo "Requested unity version is {$unityVersion}"
+          
+          $InstalledUnityVersions = unity-hub editors
+          $editorRootPath = unity-hub ip -g
+          echo "Installed unity versions are {$InstalledUnityVersions}"
+          echo "Unity install path is {$editorRootPath}"
+
+          $versionLength = Get-LetterCount $unityVersion
+          if ($versionLength -eq 4) {
             $queryUnityVersion = GetString $InstalledUnityVersions "$unityVersion.{4,7}" -MatchIndex 0
-            if ($queryUnityVersion -ne 0) 
-            {
-                $unityVersion = $queryUnityVersion.Trim(","," ").Trim()
-                echo "Long Unity version is $unityVersion"
-            }
-            else 
-            {
-                echo "Unity $unityVersion not found on this machine, please install"
-                exit 1
-            }
           }
+          elseif ($versionLength -eq 6) {
+            $queryUnityVersion = GetString $InstalledUnityVersions "$unityVersion.{4,5}" -MatchIndex 0
+          }
+          else {
+            $queryUnityVersion = GetString $InstalledUnityVersions "$unityVersion" -MatchIndex 0
+          }
+
+          echo "Found unity version is {$queryUnityVersion} for input {$unityVersion}"
+
+          if ($queryUnityVersion -ne 0) 
+          {
+            $unityVersion = $queryUnityVersion.Trim(","," ").Trim()
+            echo "Long Unity version is $unityVersion"
+          }
+          else 
+          {
+            echo "Unity $unityVersion not found on this machine, skipping"
+            exit 0
+          }
+
+          echo "::endgroup::"
 
           $editorPath = "{0}{1}{2}" -f $editorRootPath,$unityVersion,$editorFileEx
 
