--- a/.github/workflows/buildupmpackages.yml
+++ b/.github/workflows/buildupmpackages.yml
@@ -16,14 +16,14 @@ jobs:
   # Check Unity version requird by the package
   validate-environment:
     name: Get Unity Version from UPM package
-    uses: realitycollective/reusableworkflows/.github/workflows/getunityversionfrompackage.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/getunityversionfrompackage.yml@v2
     with:
       build-target: windows
 
   # Validate output parameters from the Validate-Environment job
   Check-Params-unityversion:
     needs: validate-environment
-    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2
     name: Test output from Validate
     with:
       build-target: windows
@@ -33,7 +33,7 @@ jobs:
   Setup-Unity:
     name: Validate Unity Install
     needs: [Check-Params-unityversion, validate-environment]
-    uses: realitycollective/reusableworkflows/.github/workflows/validateunityinstall.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/validateunityinstall.yml@v2
     with:
       build-target: windows
       unityversion: ${{ needs.validate-environment.outputs.unityversion }}
@@ -41,7 +41,7 @@ jobs:
   # Validate unityeditorversion output parameter from the Setup-Unity job
   Check-Params-editorversion:
     needs: [Setup-Unity]
-    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2
     name: Test editor version from Setup-Unity
     with:
       build-target: windows
@@ -50,7 +50,7 @@ jobs:
   # Validate unityeditorinstalled output parameter from the Setup-Unity job
   Check-Params-editorinstalled:
     needs: [Setup-Unity]
-    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/testparams.yml@v2
     name: Test editor installed from Setup-Unity
     with:
       build-target: windows
@@ -60,7 +60,7 @@ jobs:
   Run-Unit-Tests:
     name: Run Unity Unit Tests
     needs: [Check-Params-editorversion, Setup-Unity]
-    uses: realitycollective/reusableworkflows/.github/workflows/rununityUPMbuild.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/rununityUPMbuild.yml@v2
     with:
       build-target: windows
       unityversion: ${{ needs.Setup-Unity.outputs.unityeditorversion }}
@@ -72,7 +72,7 @@ jobs:
   run-upm:
     name: Publish UPM Package
     needs: Run-Unit-Tests
-    uses: realitycollective/reusableworkflows/.github/workflows/upversionandtagrelease.yml@v2-beta
+    uses: realitycollective/reusableworkflows/.github/workflows/upversionandtagrelease.yml@v2
     with:
       build-target: ubuntu-latest
       build-type: pre-release
