--- a/.github/workflows/rununityUPMbuildmultiversion.yml
+++ b/.github/workflows/rununityUPMbuildmultiversion.yml
@@ -286,7 +286,7 @@ jobs:
 
           unity-editor '-createProject' $TempUnityProjectName -quit
 
-          $destinationPath = $TempUnityProjectName + $directorySeparatorChar + 'packages'
+          $destinationPath = Join-Path $TempUnityProjectName 'packages'
           Move-Item -Path $UPMFolderName -Destination $destinationPath
 
           echo "::endgroup::"
@@ -333,7 +333,7 @@ jobs:
             echo $JSONdependencies
 
             # Read current Manifest json
-            $manifestPath = $destinationPath + $directorySeparatorChar + 'manifest.json'
+            $manifestPath = Join-Path $destinationPath 'manifest.json'
             $projectManifest = Get-Content -Path $manifestPath | ConvertFrom-Json
             $strArray = $projectManifest.dependencies.PsObject.Properties | ForEach-Object {"$($_.Name)@$($_.Value),"}
 
